microservices/catalog-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalog-service
  labels:
    name: catalog-service
    app: oficina
