microservices/catalog-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: catalog-service
  labels:
    app: catalog-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: catalog-service
